Added type identification for events, fixed Bell test get_type

--- a/omnifold.ipynb
+++ b/omnifold.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,12 @@
     "\n",
     "data_preprocessor_detector_sim = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/hww_simulated_final.csv\", cuts=False)\n",
     "\n",
-    "X_detector_sim_train, X_detector_sim_val, X_detector_sim_test, y_detector_sim_train, y_detector_sim_val, y_detector_sim_test = data_preprocessor_detector_sim.run_preprocessing()"
+    "X_detector_sim_train, X_detector_sim_val, X_detector_sim_test, y_detector_sim_train, y_detector_sim_val, y_detector_sim_test, types = data_preprocessor_detector_sim.run_preprocessing()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
     "        MCreco_weights = np.ones(len(MCreco_entries))\n",
     "    if measured_weights is None:\n",
     "        measured_weights = np.ones(len(measured_entries))\n",
-    "    \n",
+    "\n",
     "    measured_labels = np.ones(len(measured_entries[measured_pass_reco_mask]))\n",
     "    MC_labels = np.zeros(len(MCgen_entries))\n",
     "\n",
@@ -115,27 +115,27 @@
     "    use_regressor =  any(~MC_pass_reco_mask)\n",
     "    if use_regressor:\n",
     "        step1_regressor = GradientBoostingRegressor(**regressor_params)\n",
-    "    \n",
+    "\n",
     "    for i in range(num_iterations):\n",
-    "        print(f\"Starting iteration {i}\") \n",
+    "        print(f\"Starting iteration {i}\")\n",
     "        step1_data = np.concatenate((MCreco_entries[MC_pass_reco_mask], measured_entries[measured_pass_reco_mask]))\n",
     "        step1_labels = np.concatenate((np.zeros(len(MCreco_entries[MC_pass_reco_mask])), measured_labels))\n",
     "        step1_weights = np.concatenate(\n",
-    "            (weights_push[MC_pass_reco_mask]*MCreco_weights[MC_pass_reco_mask], \n",
+    "            (weights_push[MC_pass_reco_mask]*MCreco_weights[MC_pass_reco_mask],\n",
     "            np.ones(len(measured_entries[measured_pass_reco_mask]))*measured_weights[measured_pass_reco_mask])\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # Training step 1 classifier and getting weights\n",
     "        step1_classifier.fit(step1_data, step1_labels, sample_weight = step1_weights)\n",
     "        new_weights = np.ones_like(weights_pull)\n",
     "        new_weights[MC_pass_reco_mask] = reweight(MCreco_entries[MC_pass_reco_mask], step1_classifier)\n",
-    "        \n",
+    "\n",
     "        # Training a regression model to predict the weights of the events that don't pass reconstruction\n",
     "        if use_regressor:\n",
     "            step1_regressor.fit(MCgen_entries[MC_pass_reco_mask], new_weights[MC_pass_reco_mask])\n",
     "            new_weights[~MC_pass_reco_mask] = step1_regressor.predict(MCgen_entries[~MC_pass_reco_mask])\n",
     "        weights_pull = np.multiply(weights_push, new_weights)\n",
-    "            \n",
+    "\n",
     "        # Training step 2 classifier\n",
     "        step2_data = np.concatenate((MCgen_entries, MCgen_entries))\n",
     "        step2_labels = np.concatenate((MC_labels, np.ones(len(MCgen_entries))))\n",
