--- a/plots.ipynb
+++ b/plots.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
     "truth = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/df_final.csv\", cuts=False, splits=False)\n",
     "truth_cuts = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/df_final.csv\", cuts=True, splits=False)\n",
     "\n",
-    "X_cuts, y_cuts = truth_cuts.run_preprocessing()\n",
-    "X, y = truth.run_preprocessing()"
+    "X_cuts, y_cuts, types = truth_cuts.run_preprocessing()\n",
+    "X, y, types = truth.run_preprocessing()"
    ]
   },
   {
