Analysis of mass mathcing + added raw_data_path for unprocessed dataset

--- a/omnifold.ipynb
+++ b/omnifold.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "config = yaml.safe_load(open('config.yaml'))\n",
     "\n",
-    "data_preprocessor_detector_sim = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/hww_simulated_final.csv\", cuts=False)\n",
+    "data_preprocessor_detector_sim = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/hww_simulated_final.csv\", raw_data_path=config['raw_data_path'], cuts=False)\n",
     "\n",
     "X_detector_sim_train, X_detector_sim_val, X_detector_sim_test, y_detector_sim_train, y_detector_sim_val, y_detector_sim_test, types = data_preprocessor_detector_sim.run_preprocessing()"
    ]
