--- a/plots.ipynb
+++ b/plots.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# truth_cuts = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/hww_simulated_final.csv\", cuts=True, splits=False)\n",
-    "truth = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/df_final.csv\", cuts=False, splits=False)\n",
-    "truth_cuts = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/df_final.csv\", cuts=True, splits=False)\n",
+    "# truth_cuts = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/hww_simulated_final.csv\", raw_data_path=config['raw_data_path'], cuts=True, splits=False)\n",
+    "truth = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/df_final.csv\", raw_data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/df_final.csv\", cuts=False, splits=False)\n",
+    "truth_cuts = DataPreprocessor(data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/df_final.csv\", raw_data_path=\"/mnt/c/Users/Lennart/Desktop/Studium/MLUnfoldingForBellTests/data/df_final.csv\", cuts=True, splits=False)\n",
     "\n",
     "X_cuts, y_cuts, types = truth_cuts.run_preprocessing()\n",
     "X, y, types = truth.run_preprocessing()"
